# Path-Lite

./: .env  .gitignore  App.tsx  Path_Lite_BRD_V1.txt  SPEECH_SERVICES_SETUP.md  app.json  jest.config.js  mcp_config.json  metro.config.js  package-lock.json  package.json  tsconfig.json
.propel/templates/: automated-e2e-template.md  automated-testing-template.md  cicd-specification-template.md  code-review-template.md  codebase-analysis-template.md  component-inventory-template.md  design-analysis-template.md  design-model-template.md  design-reference-template.md  design-specification-template.md  devops-security-review-template.md  epics-template.md  figma-specification-template.md  findings-registry-template.md  iac-module-template.md  infra-specification-template.md  issue-triage-template.md  project-plan-template.md  requirements-template.md  sprint-plan-template.md  task-template.md  (+5 more)
Docs/: Path_Lite_BRD_V1.txt  Path_Lite_BRD_V2.doc  Path_Lite_BRD_V2.txt.txt
Server/: .env.example  .gitignore  README.md  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
Server/app/: dependencies.py
Server/app/core/: config.py  middleware.py
Server/app/models/: ai.py  auth.py  patient.py
Server/app/routers/: __init__.py  ai_processing.py  auth.py  patients.py  voice.py
Server/scripts/: dev.py  start.bat  start.sh
Server/tests/: conftest.py  test_ai_processing.py  test_auth.py  test_main.py  test_patients.py
__mocks__/: setup.js
android/: README.md  build.gradle  gradle.properties  settings.gradle
ios/: Podfile  README.md
src/: index.ts
(+423 files in other folders)
