[tool.poetry]
name = "path-lite-server"
version = "0.1.0"
description = "Path-Lite FastAPI Backend Server"
authors = ["Path-Lite Team"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.110.0"}
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.0"
pydantic-settings = "^2.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
openai = "^1.0"
python-dotenv = "^1.0"

[tool.poetry.group.dev.dependencies]
black = "^24.0"
flake8 = "^7.0"
mypy = "^1.0"
httpx = "^0.27.0"
pytest = "^8.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.0"
pytest-mock = "^3.12"

[tool.poetry.scripts]
dev = "scripts.dev:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
